--- a/frontend/src/app/deck-page/deck-page.component.html
+++ b/frontend/src/app/deck-page/deck-page.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <header>
-      <h1>Buddy Board</h1>
+      <h1>Study Buddies</h1>
       <nav>
         <a routerLink="/dashboard">Feed</a>
         <a routerLink="/cardpage">Cards</a>
@@ -14,7 +14,7 @@
             <div class="deck-section-header">
                 <h2>My Public Decks ({{publicDeck.length}})</h2>
                 <button class="deck-button"  (click)="toggleOverlay()">Deck <span class="circle">+</span></button>
-                
+
             </div>
             <br>
             <div class="decks">
