Flash card css added

--- a/frontend/src/app/cards-page/cards-page.component.html
+++ b/frontend/src/app/cards-page/cards-page.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <header>
-      <h1>Study Buddies</h1>
+      <h1>Buddy Board</h1>
       <nav>
         <a routerLink="/dashboard">Feed</a>
         <a routerLink="/cardpage">Cards</a>
