--- a/frontend/src/app/flashcard/flashcard.component.html
+++ b/frontend/src/app/flashcard/flashcard.component.html
@@ -1,4 +1,6 @@
-<div class="flashcard-form">
+<div class="container">
+  <h1 class="main-title">Buddy Board</h1>
+  <div class="flashcard-form">
     <h2>Create Flashcard</h2>
     <form [formGroup]="flashcardForm" (ngSubmit)="onSave()">
       <div>
@@ -20,8 +22,14 @@
           <small *ngIf="flashcardForm.get('deckAssignment')?.hasError('required')">Description is required.</small>
         </div>
       </div>
-      <button type="submit" [disabled]="flashcardForm.invalid">Save</button>
-      <button type="button" (click)="onCancel()">Cancel</button>
+      <div class="button-group">
+        <button type="submit" [disabled]="flashcardForm.invalid">Save</button>
+        <button type="button" (click)="onCancel()">Cancel</button>
+      </div>
     </form>
   </div>
-  
+  <footer>
+    Studdy Buddies, All rights reserved, 2024
+  </footer>
+</div>
+
