--- a/frontend/src/app/favorite-deck/favorite-deck.component.html
+++ b/frontend/src/app/favorite-deck/favorite-deck.component.html
@@ -15,7 +15,7 @@
         <br><br>
         <div class="decks">
           <div class="deck" *ngFor="let deck of favoriteDecks" >
-            <a routerLink="/deckDetails" class="icon-link">
+            <a [routerLink]="['/deck', deck._id]" class="icon-link">
               <div class="icon">
                 <div class="paper back"></div>
                 <div class="paper middle"></div>
@@ -26,8 +26,8 @@
                 </div>
               </div>
             </a>
-            <p class="deck-title">{{ deck.name }}</p>
-            <p class="deck-author">By By {{ deck.author }}</p>
+            <p class="deck-title">{{ deck.title }}</p>
+            <p class="deck-author">By {{ deck.created_by}}</p>
           </div>
         </div>
       </section>
