--- a/frontend/src/app/public-deck/public-deck.component.html
+++ b/frontend/src/app/public-deck/public-deck.component.html
@@ -2,10 +2,10 @@
     <header>
       <h1>Study Buddies</h1>
       <nav>
-        <a href="#" routerLink="/feed">Feed</a>
-        <a href="#" routerLink="/feed">Cards</a>
-        <a href="#" routerLink="/feed">Decks</a>
-        <a href="#" routerLink="/feed">Logout</a>
+        <a routerLink="/dashboard">Feed</a>
+        <a routerLink="/cardpage">Cards</a>
+        <a routerLink="/deckPage">Decks</a>
+        <a routerLink="/signin">Logout</a>
       </nav>
     </header>
     <br><br>
@@ -15,7 +15,7 @@
         <br><br>
         <div class="decks">
           <div class="deck" *ngFor="let deck of publicDecks" >
-            <a href="your-link-here" routerLink="/deckDetails" class="icon-link">
+            <a [routerLink]="['/deck', deck._id]" class="icon-link">
               <div class="icon">
                 <div class="paper back"></div>
                 <div class="paper middle"></div>
@@ -26,8 +26,8 @@
                 </div>
               </div>
             </a>
-            <p class="deck-title">{{ deck.name }}</p>
-            <p class="deck-author">By By {{ deck.author }}</p>
+            <p class="deck-title">{{ deck.title }}</p>
+            <p class="deck-author">By {{ deck.created_by }}</p>
           </div>
         </div>
       </section>
