--- a/frontend/src/app/card-details/card-details.component.html
+++ b/frontend/src/app/card-details/card-details.component.html
@@ -1,7 +1,7 @@
 
 <div class="container">
   <header>
-    <h1>Study Buddies</h1>
+    <h1>Buddy Board</h1>
     <nav>
       <a routerLink="/dashboard">Feed</a>
       <a routerLink="/cardpage">Cards</a>
@@ -46,4 +46,9 @@
     <button (click)="addToSelectedDeck()">Add</button>
     <button (click)="toggleDeckDropdown()">Cancel</button>
   </div>
-</div>
+
+  <footer>
+    Buddy Board All rights reserved, 2024
+  </footer></div>
+
+
