--- a/frontend/src/app/deck-page/deck-page.component.css
+++ b/frontend/src/app/deck-page/deck-page.component.css
@@ -1,15 +1,13 @@
 .container {
-    width: 100vw;
-    height: 100vh;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    background-color: #c0c0c0;
-    border: 4px solid black;
-    box-sizing: border-box;
-  }
+  width: 100vw;
+  min-height: 100vh; 
+  display: flex;
+  flex-direction: column;
+  background-color: #c0c0c0;
+  border: 4px solid black;
+  box-sizing:border-box;
+}
 
-  /* Header */
   header {
     font-family: 'Papyrus', 'Arial', sans-serif;
     background-color: white;
@@ -37,7 +35,7 @@
     font-weight: bold;
   }
 
-  /* Section Titles */
+
   .deck-section h2 {
     font-size: 16px;
     color: #0000ff;
@@ -48,7 +46,7 @@
     width: 90%;
     margin: auto;
   }
-  /* Deck Container */
+
   .decks {
     display: flex;
     flex-wrap: wrap;
@@ -64,10 +62,10 @@
   }
 
   .deck-title {
-    display: flex;                /* Use flexbox for centering */
-    justify-content: center;      /* Center horizontally */
-    align-items: center;          /* Center vertically */
-    text-align: center;           /* Ensure text is centered inside the flex container */
+    display: flex;                
+    justify-content: center;      
+    align-items: center;          
+    text-align: center;           
     font-size: 14px;
     margin: 5px 0;
     font-weight: bold;
@@ -91,9 +89,6 @@
     font-size: 10px;
   }
 
-
-
-  /* Footer */
   footer {
     font-size: 12px;
     text-align: center;
@@ -101,22 +96,22 @@
     padding: 5px;
     font-family: 'Papyrus', 'Arial', sans-serif;
   }
-  /* Icon Container */
+
   .icon {
     position: relative;
-    width: 50px; /* Reduced size */
-    height: 65px; /* Reduced size */
+    width: 50px; 
+    height: 65px; 
   }
 
-  /* Paper Base */
+
   .paper {
     position: absolute;
     width: 80px;
-    height: 75px;
+    height: 65px;
     background-color: rgb(214, 214, 3);
     border: 1px solid black;
     border-radius: 2px;
-    padding-top: 3px;
+    
   }
 
   .paper.back {
@@ -134,7 +129,7 @@
     right: 0;
   }
 
-  /* Dotted Lines */
+
   .paper .line {
     width: 70%;
     height: 1px;
@@ -143,7 +138,7 @@
     margin: 5px auto;
   }
 
-  /* Icon Link */
+
   .icon-link {
     display: inline-block;
     text-decoration: none;
@@ -160,11 +155,9 @@
 }
 .deck-footer {
     display: flex;
-    justify-content: flex-end; /* Align the link to the right */
+    justify-content: flex-end; 
     position: relative;
 }
-
-/* Style the See All link */
 .see-all {
   background-color: transparent;
   background-repeat: no-repeat;
@@ -177,12 +170,9 @@
     font-size: 12px;
     font-weight: bold;
     display: inline-block;
-    position: relative;  /* Allow further positioning adjustments */
-    top: -30px;  /* Move the button 20px upwards */
+    position: relative;
+    top: -30px;  
 }
-
-/* Adjust button styling to fit with the heading */
-/* Style the deck button */
 .deck-button {
     height: 40px;
     width: 200px;
@@ -195,10 +185,10 @@
     font-weight: bold;
     margin-top: 10px;
     font-family: 'Papyrus', 'Arial', sans-serif;
-    position: relative;  /* Make the button a positioned element */
+    position: relative;  
 }
 
-/* Style the circle */
+
 .circle {
     display: inline-block;
     width: 30px;
@@ -209,15 +199,31 @@
     font-size: 20px;
     text-align: center;
     font-family: 'Papyrus', 'Arial', sans-serif;
-    position: absolute;  /* Absolute positioning within the button */
-    right: 1px;         /* Adjust as needed to position circle */
+    position: absolute; 
+    right: 1px;         
 }
 .search-icon{
     width: 30px;
     height: 30px;
-    position: absolute;  /* Absolute positioning within the button */
+    position: absolute;
     right: 1px;
 }
+.see-all2{
+  background-color: transparent;
+  background-repeat: no-repeat;
+    border: none;
+    cursor: pointer;
+    overflow: hidden;
+    outline: none;
+    text-decoration: none;
+    color: #0000ff;
+    font-size: 12px;
+    font-weight: bold;
+    display: inline-block;
+    position: relative;  
+    top: -10px; 
+}
+
 
   .deck-button:hover {
     background-color: rgb(0, 120, 210);
