--- a/frontend/src/app/deck-page/deck-page.component.html
+++ b/frontend/src/app/deck-page/deck-page.component.html
@@ -75,7 +75,7 @@
             </div>
             <div class="deck-footer">
                 <button
-          class="see-all"
+          class="see-all2"
           [disabled]="favoriteDecks.length <= 4"
           (click)="toggleFavDecks()"
         >
