--- a/frontend/src/app/deck-search/deck-search.component.css
+++ b/frontend/src/app/deck-search/deck-search.component.css
@@ -52,14 +52,14 @@ header {
     text-decoration: underline;
   }
 
-/* Container for the page */
-.container {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  width: 100%;
-  background-color: #c0c0c0;
-  border: 4px solid black;
+  .container {
+    width: 100vw;
+    min-height: 100vh; /* Starts at 100vh but grows with content */
+    display: flex;
+    flex-direction: column;
+    background-color: #c0c0c0;
+    border: 4px solid black;
+    box-sizing:border-box;
 }
 
 /* Main Content Section */
