--- a/frontend/src/app/deck-search/deck-search.component.html
+++ b/frontend/src/app/deck-search/deck-search.component.html
@@ -106,6 +106,6 @@
   </main>
 
   <footer>
-    <p>Study Buddies, All rights reserved, 2024</p>
+    <p>Buddy Board, All rights reserved, 2024</p>
   </footer>
 </div>
