--- a/frontend/src/app/cards-page/cards-page.component.html
+++ b/frontend/src/app/cards-page/cards-page.component.html
@@ -38,6 +38,6 @@
   </main>
 
   <footer>
-    <p>Study Buddies, All rights reserved, 2024</p>
+    <p>Buddy Board, All rights reserved, 2024</p>
   </footer>
 </div>
