--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -59,6 +59,6 @@
     </main>
     <hr class="divider">
     <footer>
-      <p><b>Study Buddies, All rights reserved, 2024</b></p>
+      <p><b>Buddy Board, All rights reserved, 2024</b></p>
     </footer>
   </div>
