--- a/frontend/src/app/signup/signup.component.html
+++ b/frontend/src/app/signup/signup.component.html
@@ -92,5 +92,5 @@
     </form>
   </div>
 
-  <footer class="footer">Footer. Buddy Board. All rights reserved. 2024</footer>
+  <footer class="footer">Buddy Board. All rights reserved. 2024</footer>
 </div>
