--- a/frontend/src/app/card-details/card-details.component.css
+++ b/frontend/src/app/card-details/card-details.component.css
@@ -17,8 +17,8 @@ body {
     font-family: 'Papyrus', 'Arial', sans-serif;
     background-color: #c0c0c0;
     color: #333;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    min-height: 100vh; 
 }
 
 header {
