--- a/frontend/src/app/dashboard/dashboard.component.css
+++ b/frontend/src/app/dashboard/dashboard.component.css
@@ -6,11 +6,11 @@
 }
 
 .container {
-  width: 100vw;
-  height: 100vh;
-  flex: 1;
   display: flex;
   flex-direction: column;
+  justify-content: space-between; /* Ensures footer is pushed to the bottom */
+  width: 100vw;
+  min-height: 100vh; /* Allows growth beyond viewport if content expands */
   background-color: #c0c0c0;
   border: 4px solid black;
   box-sizing: border-box;
@@ -117,14 +117,6 @@ header nav a {
     top: -30px;  /* Move the button 20px upwards */
 }
 
-/* Footer */
-footer {
-  font-size: 12px;
-  text-align: center;
-  margin-top: 5px;
-  padding: 5px;
-  font-family: 'Papyrus', 'Arial', sans-serif;
-}
 /* Icon Container */
 .icon {
   position: relative;
@@ -176,5 +168,14 @@ footer {
 .icon-link:hover .icon {
   cursor: pointer;
   opacity: 0.8;
+}
+
+/* Footer */
+footer {
+  font-size: 12px;
+  text-align: center;
+  padding: 5px;
+  background-color: #c0c0c0;
+  margin-top: auto; /* Push footer to the bottom of the container */
 }
 
