--- a/frontend/src/app/deck-details/deck-details.component.css
+++ b/frontend/src/app/deck-details/deck-details.component.css
@@ -1,14 +1,11 @@
 /* General container styles */
 .container {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: #d9d9d9;
-    font-family: Papyrus;
-
-  }
+  height: 99vh; /* Ensure it takes up the full height of the viewport */
+  display: flex;
+  flex-direction: column; /* Use column layout */
+  border: 2px solid black;
+  background-color: #c0c0c0;
+}
   
   /* Header styles */
   .header {
@@ -178,7 +175,16 @@
     text-align: center;
     animation: fadeInOut 3s ease-in-out;
   }
-  
+    /* Footer */
+    footer {
+      font-family: 'Papyrus', 'Arial', sans-serif;
+      padding: 0px;
+      text-align: center;
+      font-size: 14px;
+      font-weight: bold;
+      background-color: #c0c0c0;
+    }
+
   @keyframes fadeInOut {
     0% { opacity: 0; }
     10% { opacity: 1; }
