--- a/frontend/src/app/deck-details/deck-details.component.html
+++ b/frontend/src/app/deck-details/deck-details.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <!-- Header Section -->
   <div class="header">
-    <h1>Study Buddies</h1>
+    <h1>Buddy Board</h1>
     <nav>
       <a routerLink="/dashboard">Feed</a>
       <a routerLink="/cardpage">Cards</a>
@@ -71,4 +71,7 @@
       </div>
     </div>
   </div>
+  <footer>
+    <p>Buddy Board, All rights reserved, 2024</p>
+  </footer>
 </div>
