deck details page font css updated

--- a/frontend/src/app/deck-details/deck-details.component.css
+++ b/frontend/src/app/deck-details/deck-details.component.css
@@ -1,4 +1,9 @@
-/* General container styles */
+/* General Reset */
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Papyrus', 'Arial', sans-serif;
+}
 .container {
   height: 99vh; /* Ensure it takes up the full height of the viewport */
   display: flex;
