--- a/frontend/src/app/deck-details/deck-details.component.css
+++ b/frontend/src/app/deck-details/deck-details.component.css
@@ -29,10 +29,12 @@
   }
   
   .header nav a {
-    margin: 0 15px;
-    font-size: 1.25rem;
+    font-family: 'Papyrus', 'Arial', sans-serif;
+    margin: 0 10px;
     text-decoration: none;
     color: blue;
+    font-size: 1.25rem;
+    font-weight: bold;
   }
   
   .header nav a:hover {
