sign-in css updation

--- a/frontend/src/app/signin/signin.component.html
+++ b/frontend/src/app/signin/signin.component.html
@@ -74,7 +74,7 @@
         class="submit-button"
       >
         <span *ngIf="isLoading" class="spinner"></span>
-        {{ isLoading ? "Signing uou in..." : "Sign-In" }}
+        {{ isLoading ? "Signing You in..." : "Sign-In" }}
       </button>
 
       <div class="form-section">
