Update reset password link, refactor deck page component, and enhance deck service methods

--- a/frontend/src/app/reset-password/reset-password.component.html
+++ b/frontend/src/app/reset-password/reset-password.component.html
@@ -22,7 +22,7 @@
 
       <button type="submit" class="button">Reset</button>
     </form>
-    <a href="#" class="link">Go back to Sign in</a>
+    <a href="/signin" class="link">Go back to Sign in</a>
   </div>
 </div>
 
