--- a/frontend/src/app/deck-details/deck-details.component.css
+++ b/frontend/src/app/deck-details/deck-details.component.css
@@ -2,7 +2,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Papyrus', 'Arial', sans-serif;
+  font-family: "Papyrus", "Arial", sans-serif;
 }
 .container {
   height: 99vh; /* Ensure it takes up the full height of the viewport */
@@ -11,190 +11,196 @@
   border: 2px solid black;
   background-color: #c0c0c0;
 }
-  
-  /* Header styles */
-  .header {
-    display: flex;
-    height: 5%;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 2px solid black;
-    padding: 10px;
-    background-color: #fff;
-  }
-  
-  .header h1 {
-    font-weight: 800;
-    margin: 0;
-  }
-  
-  .header nav a {
-    margin: 0 15px;
-    font-size: 1.25rem;
-    text-decoration: none;
-    color: blue;
-  }
-  
-  .header nav a:hover {
-    text-decoration: underline;
-  }
-  
-  /* Content styles */
-  .content {
-    display: flex;
-    padding: 4rem;
-    height: 74%;
-    margin-top: 10px;
-  }
-  
-  .sidebar {
 
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 0.5rem;
-    padding-right: 10px;
-  }
-  .index-page{
-    width: 100%;
-    height: 70%;
-  }
-  
-  .back-button {
-    background-color: lightblue;
-    font-weight: 600;
-    border: 1px solid black;
-    padding: 10px;
-    cursor: pointer;
-    margin-bottom: 20px;
-  }
-  
-  .back-button:hover {
-    background-color: deepskyblue;
-  }
-  .actions{
-    padding: 0.5rem;
-    display: flex;
-    align-items: flex-start;
-    gap: 1rem;
-  }
-  .like-button,.dislike-button{
-    font-size: 1.3rem;
-    cursor: pointer;
-  }
+/* Header styles */
+.header {
+  display: flex;
+  height: 5%;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 2px solid black;
+  padding: 10px;
+  background-color: #fff;
+}
 
-  .menu {
-    list-style: none;
-    padding: 0;
-    max-height: 56%;
-    overflow-y: auto;
-  }
-  
-  .menu li {
-    margin: 10px 0;
-    padding: 8px;
-    background-color: yellow;
-    cursor: pointer;
-    font-weight: 600;
-    border: 1px solid black;
-  }
-  
-  .menu li.active {
-    background-color: black;
-    color: white;
-  }
-  
-  
-  .info {
-    margin-top: 10px;
-    font-size: 14px;
-    font-weight: 550;
-  }
-  
-  .main-content {
-    flex: 2;
-    margin: 1rem 2rem;
-    padding: 20px;
-    background-color: yellow;
-    border: 2px solid black;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    
-  }
-  .main-content .content{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    gap: 1rem;
-  }
-  
-  .main-content h3 {
-    font-size: 2rem;
-    text-align: center;
-    text-decoration: underline;
-  }
-  
-  .main-content p {
-    font-size: 18px;
-    color: blue;
-    margin-top: 20px;
-  }
-  
-  .navigation {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 20px;
-  }
-  
-  .navigation button {
-    background-color: lightblue;
-    border: none;
-    padding: 10px;
-    cursor: pointer;
-  }
-  
-  .navigation button:disabled {
-    background-color: gray;
-    cursor: not-allowed;
-  }
-  
-  .navigation span {
-    font-size: 18px;
-    font-weight: bold;
-  }
+.header h1 {
+  font-weight: 800;
+  margin: 0;
+}
+
+.header nav a {
+  margin: 0 15px;
+  font-size: 1.25rem;
+  text-decoration: none;
+  color: blue;
+}
+
+.header nav a:hover {
+  text-decoration: underline;
+}
+
+/* Content styles */
+.content {
+  display: flex;
+  padding: 4rem;
+  height: 74%;
+  margin-top: 10px;
+}
+
+.sidebar {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0.5rem;
+  padding-right: 10px;
+}
+.index-page {
+  width: 100%;
+  height: 70%;
+}
+
+.back-button {
+  background-color: lightblue;
+  font-weight: 600;
+  border: 1px solid black;
+  padding: 10px;
+  cursor: pointer;
+  margin-bottom: 20px;
+}
+
+.back-button:hover {
+  background-color: deepskyblue;
+}
+.actions {
+  padding: 0.5rem;
+  display: flex;
+  align-items: flex-start;
+  gap: 1rem;
+}
+.like-button,
+.dislike-button {
+  font-size: 1.3rem;
+  cursor: pointer;
+}
+
+.menu {
+  list-style: none;
+  padding: 0;
+  max-height: 56%;
+  overflow-y: auto;
+}
+
+.menu li {
+  margin: 10px 0;
+  padding: 8px;
+  background-color: yellow;
+  cursor: pointer;
+  font-weight: 600;
+  border: 1px solid black;
+}
+
+.menu li.active {
+  background-color: black;
+  color: white;
+}
+
+.info {
+  margin-top: 10px;
+  font-size: 14px;
+  font-weight: 550;
+}
+
+.main-content {
+  flex: 2;
+  margin: 1rem 2rem;
+  padding: 20px;
+  background-color: yellow;
+  border: 2px solid black;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: auto;
+  position: relative;
+}
+.main-content .content {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 1rem;
+}
+
+.main-content h3 {
+  font-size: 2rem;
+  text-align: center;
+  text-decoration: underline;
+}
+
+.main-content p {
+  font-size: 18px;
+  color: blue;
+  margin-top: 20px;
+}
+
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.navigation button {
+  background-color: lightblue;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.navigation button:disabled {
+  background-color: gray;
+  cursor: not-allowed;
+}
+
+.navigation span {
+  font-size: 18px;
+  font-weight: bold;
+}
 .popup-message {
-    position: fixed;
-    top: 10%;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #333;
-    color: #fff;
-    padding: 15px 30px;
-    border-radius: 5px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
-    font-size: 16px;
-    text-align: center;
-    animation: fadeInOut 3s ease-in-out;
-  }
-    /* Footer */
-    footer {
-      font-family: 'Papyrus', 'Arial', sans-serif;
-      padding: 0px;
-      text-align: center;
-      font-size: 14px;
-      font-weight: bold;
-      background-color: #c0c0c0;
-    }
+  position: fixed;
+  top: 10%;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #333;
+  color: #fff;
+  padding: 15px 30px;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  font-size: 16px;
+  text-align: center;
+  animation: fadeInOut 3s ease-in-out;
+}
+/* Footer */
+footer {
+  font-family: "Papyrus", "Arial", sans-serif;
+  padding: 0px;
+  text-align: center;
+  font-size: 14px;
+  font-weight: bold;
+  background-color: #c0c0c0;
+}
 
-  @keyframes fadeInOut {
-    0% { opacity: 0; }
-    10% { opacity: 1; }
-    90% { opacity: 1; }
-    100% { opacity: 0; }
+@keyframes fadeInOut {
+  0% {
+    opacity: 0;
   }
-  
-  
+  10% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
