--- a/frontend/src/app/cards-page/cards-page.component.html
+++ b/frontend/src/app/cards-page/cards-page.component.html
@@ -3,7 +3,7 @@
       <h1>Buddy Board</h1>
       <nav>
         <a routerLink="/dashboard">Feed</a>
-        <a routerLink="/cardpage">Cards</a>
+        <a routerLink="/cardpage" class="active">Cards</a>
         <a routerLink="/deckPage">Decks</a>
         <a routerLink="/signin">Logout</a>
       </nav>
