--- a/frontend/src/app/card-details/card-details.component.html
+++ b/frontend/src/app/card-details/card-details.component.html
@@ -4,7 +4,7 @@
     <h1>Buddy Board</h1>
     <nav>
       <a routerLink="/dashboard">Feed</a>
-      <a routerLink="/cardpage">Cards</a>
+      <a routerLink="/cardpage" class="active">Cards</a>
       <a routerLink="/deckPage">Decks</a>
       <a routerLink="/signin">Logout</a>
     </nav>
@@ -20,8 +20,8 @@
       </div>
 
       <div class="note-metadata">
-        <p><strong>Created On:</strong> {{ note.createdOn }}</p>
-        <p><strong>Last Edited On:</strong> {{ note.lastEdited }}</p>
+        <p><strong>Created On:</strong> <b> {{ note.createdOn }}</b></p>
+        <p><strong>Last Edited On:</strong> <b> {{ note.lastEdited }}</b></p>
       </div>
     </div>
 
