--- a/frontend/src/app/cards-page/cards-page.component.css
+++ b/frontend/src/app/cards-page/cards-page.component.css
@@ -8,11 +8,14 @@ body {
   }
 
   .container {
-    height: 99vh; /* Ensure it takes up the full height of the viewport */
     display: flex;
-    flex-direction: column; /* Use column layout */
-    border: 2px solid black;
+    flex-direction: column;
+    justify-content: space-between; /* Ensures footer is pushed to the bottom */
+    width: 100vw;
+    min-height: 100vh; /* Allows growth beyond viewport if content expands */
     background-color: #c0c0c0;
+    border: 4px solid black;
+    box-sizing: border-box;
   }
 
   header {
@@ -51,9 +54,14 @@ body {
   }
 
   header nav a:hover {
-    font-family: 'Papyrus', 'Arial', sans-serif;
     text-decoration: underline;
   }
+  
+  header nav a.active {
+    text-decoration: underline;
+    color: #0000ff; /* Optional: Different color to indicate the active page */
+  }
+  
 
   /* Main Section */
   main {
@@ -166,8 +174,8 @@ body {
   /* Footer */
   footer {
     font-family: 'Papyrus', 'Arial', sans-serif;
-    padding: 0px;
+    padding: 5px;
     text-align: center;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: bold;
   }
