--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
     <header>
       <h1>Buddy Board</h1>
       <nav>
-        <a routerLink="/dashboard">Feed</a>
+        <a routerLink="/dashboard" class="active">Feed</a>
         <a routerLink="/cardpage">Cards</a>
         <a routerLink="/deckPage">Decks</a>
         <a routerLink="/signin">Logout</a>
