--- a/frontend/src/app/deck-page/deck-page.component.html
+++ b/frontend/src/app/deck-page/deck-page.component.html
@@ -4,7 +4,7 @@
       <nav>
         <a routerLink="/dashboard">Feed</a>
         <a routerLink="/cardpage">Cards</a>
-        <a routerLink="/deckPage">Decks</a>
+        <a routerLink="/deckPage" class="active">Decks</a>
         <a routerLink="/signin">Logout</a>
       </nav>
     </header>
