--- a/frontend/src/app/deck-search/deck-search.component.css
+++ b/frontend/src/app/deck-search/deck-search.component.css
@@ -12,6 +12,7 @@ body {
   height: 100vh;
   margin: 0;
 }
+
 header {
     font-family: 'Papyrus', 'Arial', sans-serif;
     background-color: white;
@@ -48,18 +49,23 @@ header {
   }
 
   header nav a:hover {
-    font-family: 'Papyrus', 'Arial', sans-serif;
     text-decoration: underline;
+  }
+  
+  header nav a.active {
+    text-decoration: underline;
+    color: #0000ff; /* Optional: Different color to indicate the active page */
   }
 
   .container {
-    width: 100vw;
+    width: 98.9vw;
     min-height: 100vh; /* Starts at 100vh but grows with content */
     display: flex;
     flex-direction: column;
     background-color: #c0c0c0;
     border: 4px solid black;
     box-sizing:border-box;
+    overflow: hidden;
 }
 
 /* Main Content Section */
@@ -94,11 +100,11 @@ main {
   color: black;
   border: 2px solid black;
   padding: 12px 18px;
-  border-radius: 8px;
+  border-radius: 0px;
   cursor: pointer;
   font-size: 16px;
-  font-weight: 500;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  font-weight: 900;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
   transition: background-color 0.3s ease;
   z-index: 10;
 }
@@ -165,13 +171,17 @@ main {
 }
 
 .search-bar input {
+  outline: none;
   flex-grow: 1; /* Allow the input to grow */
   padding: 10px;
-  border: 1px solid #000;
-  border-radius: 5px 0 0 5px;
+  border-radius: 0px;
   font-size: 14px;
   background-color: #71bad6;
   color: black;
+  border-left: 2px solid #000;
+  border-top: 2px solid #000;
+  border-bottom: 2px solid #000;
+
 }
 
 .search-bar button {
@@ -179,9 +189,12 @@ main {
   background-color: #71bad6;
   color: white;
   border: none;
-  border-radius: 0 5px 5px 0;
+  border-radius: 0;
   cursor: pointer;
   font-size: 14px;
+  border-right: 2px solid #000;
+  border-top: 2px solid #000;
+  border-bottom: 2px solid #000;
 }
 
 
@@ -265,12 +278,13 @@ footer p {
 .reset-button {
   background-color: #f44336; /* Red background */
   color: white;
-  border: none;
+  border: 1px solid black;
   padding: 8px 16px;
   font-size: 14px;
   cursor: pointer;
-  margin-top: 10px;
-  border-radius: 10px;
+  margin-top: -20px;
+  margin-left: 40px;
+  border-radius: 0px;
 }
 
 .reset-button:hover {
